--- a/readme
+++ b/readme
@@ -1,4 +1,9 @@
 https://vk.com/fave?z=video-101965347_456251314%2F13032c05a286fb5121%2Fpl_post_-101965347_70224
+
+-глянуь про .htaccess
+-регулярные выражения
+-абстрактные классы
+
 app-папка приложения
     -controllers
     -models
@@ -46,3 +51,18 @@ $ - конец строки
 метод dispatch -
 
 Под каждый контроллер - папку для views
+
+
+Виды и шаблоны:(урок 4)
+базовый класс Вида 3 свойства:
+     маршрут -нужен будет(контроллер\екшен)-папка\вид;
+     view - текущий вид
+     layouts - текущий шаблон
+        если не передали то шаблон по умолчанию
+и Методы:
+     конструктор - который будет заполнять свойства
+     рендер - подключать шаблон
+В Базовом классе Controller присвоить свойству в методе __construct
+view(action)
+Создать метод getView - создает обьект View-передает данные и вызывать метод Render обьекта View
+В Router вызываем метод getView
