--- a/readme
+++ b/readme
@@ -56,8 +56,8 @@ $ - конец строки
 Виды и шаблоны:(урок 4)
 базовый класс Вида 3 свойства:
      маршрут -нужен будет(контроллер\екшен)-папка\вид;
+     layouts - шаблон (шапка || футер )
      view - текущий вид
-     layouts - текущий шаблон
         если не передали то шаблон по умолчанию
 и Методы:
      конструктор - который будет заполнять свойства
@@ -66,3 +66,40 @@ $ - конец строки
 view(action)
 Создать метод getView - создает обьект View-передает данные и вызывать метод Render обьекта View
 В Router вызываем метод getView
+
+23min
+Перед видом должен подключаться какой-то шаблон,поетому мы будет делать буферизацию
+ob_start() -складывает все в буфер обмена,не выводя на екран
+$content = ob_get_clean() - очищает буфер обмена и помещает все что находиться в буфере
+
+Как поменять шаблон для нужного контроллера или для екшена?
+-можно передать в обьект класса нужный шаблон:
+       $this->layouts='Main';
+       $this->view='test';
+-или переопределить свойства класса
+        public $layouts
+        public $view
+
+layouts - шаблон (шапка || футер )
+view - текущий вид
+
+36min
+как не подключать шаблон()для аякса:
+-сделать флаг в контроллер
+        - $this->layouts=false;
+а во классе вьюххе проверять его
+        -if($layouts===false){
+                     $this->layouts=false;
+                 }
+торжественное чтоб строгое сравнение было(не попадало NULL)
+
+43мин
+Передача переменных в вид?
+    -создать свойство в базовом контроллер для хранение данных $data;
+       и метод,который будет получать данные з свойства
+    -в классе потомке создать метод получение данных (с модели)
+       и записи данных в свойство через базовый метод родителя
+    - В метод render передача данных
+
+compact($переменные)
+extract(array)=переменные будут ключами
