5 lessons to 28min

--- a/readme
+++ b/readme
@@ -87,7 +87,7 @@ view - текущий вид
 как не подключать шаблон()для аякса:
 -сделать флаг в контроллер
         - $this->layouts=false;
-а во классе вьюххе проверять его
+а во классе вьюхе проверять его
         -if($layouts===false){
                      $this->layouts=false;
                  }
@@ -103,3 +103,43 @@ view - текущий вид
 
 compact($переменные)
 extract(array)=переменные будут ключами
+
+Модель и работа с БД. Часть 1. Урок 5
+Чтоб не путаться классы контроллеров добавляем постфикс,к примеру "Controller"
+    -Нужно файл для хранение настроек,папка config
+    -Класс для работы с бд в папке Core:
+       -реализуем шаблон одиночки(Singleton)
+       -создаеться защищенное свойство
+       - создаеться зашищенный конструктор
+       -и публичный статический метод,который будет проверять,
+       создан ли обьект класса,если не создан-будет создавать и возвращать,
+       если создан будет возвращать
+  Метод который,будет делать возвращать результат:
+      public function execute($sql){
+             $stmt = $this->pdo->prepare($sql);
+             return $stmt->execute();
+         }
+prepare -готовить запрос и execute-данные не надо,просто true or false
+  Второй метод,будет делать выборку типо select:
+    public function query($sql){
+            $stmt = $this->pdo->prepare($sql);
+            $res = $stmt->execute();
+            if($res !==false){
+                return $stmt->fetchAll();
+            }
+         }
+
+Для модели:
+    -потребуеться свойство,котоое будет хранить подключение к бд
+    -и свойства которое будет храниться имя таблицы
+в конструкторе создаем обьект дб
+    1,2 method:
+    - обверки
+
+-----------До 28 мин ------------
+
+
+
+
+
+
